--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/flat-color-icons_home.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>CodeAmy Task</title>
   </head>
-  <body class="font-[roboto] bg-[#F9F9FA] h-[5000px]">
-    <div id="root" class="h-full"></div>
+  <body class="font-[roboto] bg-[#F9F9FA]">
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
